--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,10 @@
     <script src="assets/js/slick.min.js"></script>
     <!-- Theme JS -->
     <script src="assets/js/theme.js"></script>
+    <link rel="stylesheet" href="path/to/pe-icon-7-stroke/css/pe-icon-7-stroke.css">
+
+<!-- Optional - Adds useful class to manipulate icon font display -->
+<link rel="stylesheet" href="path/to/pe-icon-7-stroke/css/helper.css">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
