--- a/public/index.html
+++ b/public/index.html
@@ -43,6 +43,7 @@
     <!-- Theme JS -->
     <script src="assets/js/theme.js"></script>
     <link rel="stylesheet" href="path/to/pe-icon-7-stroke/css/pe-icon-7-stroke.css">
+    <script src="https://unpkg.com/react-router-dom/umd/react-router-dom.min.js"></script>
 
 <!-- Optional - Adds useful class to manipulate icon font display -->
 <link rel="stylesheet" href="path/to/pe-icon-7-stroke/css/helper.css">
